# iri-models

./: LICENSE  Makefile  README.md  pyproject.toml
nersc/: pyproject.toml
nersc/src/iri_models/nersc/: __init__.py  models.py
s3df/: openapi.json  pyproject.toml
s3df/src/iri_models/s3df/: __init__.py  models.py
